--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,6 +23,7 @@ subjects:
 - !lcsh 'Lepidoptera -- Great Britain'
 - !lcc 'QL'
 - !lcsh 'Moths -- Great Britain'
+- GITenberg
 title: "The Moths of the British Isles, Second Series\r\nComprising the Families Noctuidæ\
   \ to Hepialidæ"
 url: http://www.gutenberg.org/ebooks/41920
